ioctl test still relevant, note in README

--- a/userland/ioctl-hammer/README
+++ b/userland/ioctl-hammer/README
@@ -1,4 +1,5 @@
 Used in PR/51081 to more frequently generate a panic when attaching or
 detaching a USB wifi card such as urtwn.
 
-Should no longer be relevant, but might be useful in the future.
+Should no longer be relevant for USB.
+Still relevant for others.
